--- a/primary/postgresql.conf
+++ b/primary/postgresql.conf
@@ -1,7 +1,7 @@
 listen_addresses = '*'
 
 # Replication
-wal_level = replica
+wal_level = logical
 hot_standby = on
 max_wal_senders = 10
 max_replication_slots = 10
