論理レプリケーション用に追記

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,3 +44,23 @@ services:
     depends_on:
       primary:
         condition: service_healthy
+
+  logical-replica:
+    image: postgres:11.7
+    restart: always
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=db
+    ports:
+      - 35432:5432
+    volumes:
+      - ./logical-replica/data:/var/lib/postgresql/data
+      - ./logical-replica/postgresql.conf:/etc/postgresql/postgresql.conf
+      - ./logical-replica/pg_hba.conf:/etc/postgresql/pg_hba.conf
+    healthcheck:
+      test: pg_isready -d db
+      interval: 1s
+      timeout: 1s
+      retries: 5
+
